// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Organisms/Recipe Card Row No Recipes Row 1`] = `
Array [
  <div>
    <div
      style={
        Object {
          "padding": "2em 1em",
        }
      }
    >
      <div
        className="css-1s6lsys"
      >
        <div
          className="chakra-stack css-16ghf81"
        >
          <div
            className="css-6tobvh"
          >
            <p
              className="chakra-text css-1bzjasx"
            >
              No saved recipes yet.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <span />,
]
`;

exports[`Storyshots Organisms/Recipe Card Row Recipes Error 1`] = `
Array [
  <div>
    <div
      style={
        Object {
          "padding": "2em 1em",
        }
      }
    >
      <div
        className="css-1s6lsys"
      >
        <div
          className="chakra-stack css-16ghf81"
        >
          <div
            className="css-1y5jbh5"
          >
            <div
              aria-label="alert-box"
              className="chakra-alert css-18yc9ai"
              role="alert"
            >
              <span
                className="chakra-alert__icon css-vjdx0l"
              >
                <svg
                  className="chakra-icon css-fi0ww0"
                  focusable={false}
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M11.983,0a12.206,12.206,0,0,0-8.51,3.653A11.8,11.8,0,0,0,0,12.207,11.779,11.779,0,0,0,11.8,24h.214A12.111,12.111,0,0,0,24,11.791h0A11.766,11.766,0,0,0,11.983,0ZM10.5,16.542a1.476,1.476,0,0,1,1.449-1.53h.027a1.527,1.527,0,0,1,1.523,1.47,1.475,1.475,0,0,1-1.449,1.53h-.027A1.529,1.529,0,0,1,10.5,16.542ZM11,12.5v-6a1,1,0,0,1,2,0v6a1,1,0,1,1-2,0Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              <div
                className="css-0"
              >
                <div
                  className="chakra-alert__title css-pldov1"
                >
                  Error title
                </div>
                <div
                  className="chakra-alert__desc css-zycdy9"
                >
                  Error message with details
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <span />,
]
`;

exports[`Storyshots Organisms/Recipe Card Row Recipes Row 1`] = `
Array [
  <div>
    <div
      style={
        Object {
          "padding": "2em 1em",
        }
      }
    >
      <div
        className="css-1s6lsys"
      >
        <div
          className="chakra-stack css-16ghf81"
        >
          <div
            className="css-6tobvh"
          >
            <div
              aria-label="recipe-card"
              className="chakra-stack recipe-card css-iqg674"
              onClick={[Function]}
            >
              <img
                aria-label="Pizza Pretzel image"
                className="chakra-image css-g90lcp"
                src="https://www.edamam.com/web-img/ef9/ef9fdcf4dae46e0d4f7c40657d610a72.jpg"
              />
              <div
                className="css-1s6lsys"
              >
                <div
                  className="chakra-stack css-17hlvik"
                >
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    italian
                  </span>
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    main course
                  </span>
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    lunch/dinner
                  </span>
                </div>
              </div>
              <div
                className="css-19itkfi"
              >
                Pizza Pretzel
              </div>
              <div
                className="chakra-stack css-22j5vo"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  strokeWidth="0"
                  style={
                    Object {
                      "color": undefined,
                    }
                  }
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15 1H9v2h6V1zm-4 13h2V8h-2v6zm8.03-6.61l1.42-1.42c-.43-.51-.9-.99-1.41-1.41l-1.42 1.42C16.07 4.74 14.12 4 12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9 9-4.03 9-9c0-2.12-.74-4.07-1.97-5.61zM12 20c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z"
                  />
                </svg>
                <span
                  aria-label="time-to-prepare"
                  className="chakra-text css-f9yqvl"
                >
                  - min
                </span>
              </div>
            </div>
            <div
              aria-label="recipe-card"
              className="chakra-stack recipe-card css-iqg674"
              onClick={[Function]}
            >
              <img
                aria-label="Pepperoni Pizza Grilled Cheese image"
                className="chakra-image css-g90lcp"
                src="https://www.edamam.com/web-img/f99/f99c4ec199f065478906fa9dae0aff71.jpg"
              />
              <div
                className="css-1s6lsys"
              >
                <div
                  className="chakra-stack css-17hlvik"
                >
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    italian
                  </span>
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    main course
                  </span>
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    lunch/dinner
                  </span>
                </div>
              </div>
              <div
                className="css-19itkfi"
              >
                Pepperoni Pizza Grilled Cheese
              </div>
              <div
                className="chakra-stack css-22j5vo"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  strokeWidth="0"
                  style={
                    Object {
                      "color": undefined,
                    }
                  }
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15 1H9v2h6V1zm-4 13h2V8h-2v6zm8.03-6.61l1.42-1.42c-.43-.51-.9-.99-1.41-1.41l-1.42 1.42C16.07 4.74 14.12 4 12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9 9-4.03 9-9c0-2.12-.74-4.07-1.97-5.61zM12 20c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z"
                  />
                </svg>
                <span
                  aria-label="time-to-prepare"
                  className="chakra-text css-f9yqvl"
                >
                  - min
                </span>
              </div>
            </div>
            <div
              aria-label="recipe-card"
              className="chakra-stack recipe-card css-iqg674"
              onClick={[Function]}
            >
              <img
                aria-label="Gourmet Pizza image"
                className="chakra-image css-g90lcp"
                src="https://www.edamam.com/web-img/e74/e741601131bff2d59011d2893c8dd317.png"
              />
              <div
                className="css-1s6lsys"
              >
                <div
                  className="chakra-stack css-17hlvik"
                >
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    italian
                  </span>
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    main course
                  </span>
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    lunch/dinner
                  </span>
                </div>
              </div>
              <div
                className="css-19itkfi"
              >
                Gourmet Pizza
              </div>
              <div
                className="chakra-stack css-22j5vo"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  strokeWidth="0"
                  style={
                    Object {
                      "color": undefined,
                    }
                  }
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15 1H9v2h6V1zm-4 13h2V8h-2v6zm8.03-6.61l1.42-1.42c-.43-.51-.9-.99-1.41-1.41l-1.42 1.42C16.07 4.74 14.12 4 12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9 9-4.03 9-9c0-2.12-.74-4.07-1.97-5.61zM12 20c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z"
                  />
                </svg>
                <span
                  aria-label="time-to-prepare"
                  className="chakra-text css-f9yqvl"
                >
                  25 min
                </span>
              </div>
            </div>
            <div
              aria-label="recipe-card"
              className="chakra-stack recipe-card css-iqg674"
              onClick={[Function]}
            >
              <img
                aria-label="Spinach and Feta Pizza image"
                className="chakra-image css-g90lcp"
                src="https://www.edamam.com/web-img/240/240a54769dfdf178639060c52167aff9.JPG"
              />
              <div
                className="css-1s6lsys"
              >
                <div
                  className="chakra-stack css-17hlvik"
                >
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    greek
                  </span>
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    main course
                  </span>
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    lunch/dinner
                  </span>
                </div>
              </div>
              <div
                className="css-19itkfi"
              >
                Spinach and Feta Pizza
              </div>
              <div
                className="chakra-stack css-22j5vo"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  strokeWidth="0"
                  style={
                    Object {
                      "color": undefined,
                    }
                  }
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15 1H9v2h6V1zm-4 13h2V8h-2v6zm8.03-6.61l1.42-1.42c-.43-.51-.9-.99-1.41-1.41l-1.42 1.42C16.07 4.74 14.12 4 12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9 9-4.03 9-9c0-2.12-.74-4.07-1.97-5.61zM12 20c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z"
                  />
                </svg>
                <span
                  aria-label="time-to-prepare"
                  className="chakra-text css-f9yqvl"
                >
                  - min
                </span>
              </div>
            </div>
            <div
              aria-label="recipe-card"
              className="chakra-stack recipe-card css-iqg674"
              onClick={[Function]}
            >
              <img
                aria-label="Pizza Roll-Up image"
                className="chakra-image css-g90lcp"
                src="https://www.edamam.com/web-img/f60/f60a5c7e9554d399acf646e22681dfbd.jpg"
              />
              <div
                className="css-1s6lsys"
              >
                <div
                  className="chakra-stack css-17hlvik"
                >
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    italian
                  </span>
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    main course
                  </span>
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    lunch/dinner
                  </span>
                </div>
              </div>
              <div
                className="css-19itkfi"
              >
                Pizza Roll-Up
              </div>
              <div
                className="chakra-stack css-22j5vo"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  strokeWidth="0"
                  style={
                    Object {
                      "color": undefined,
                    }
                  }
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15 1H9v2h6V1zm-4 13h2V8h-2v6zm8.03-6.61l1.42-1.42c-.43-.51-.9-.99-1.41-1.41l-1.42 1.42C16.07 4.74 14.12 4 12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9 9-4.03 9-9c0-2.12-.74-4.07-1.97-5.61zM12 20c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z"
                  />
                </svg>
                <span
                  aria-label="time-to-prepare"
                  className="chakra-text css-f9yqvl"
                >
                  - min
                </span>
              </div>
            </div>
            <div
              aria-label="recipe-card"
              className="chakra-stack recipe-card css-iqg674"
              onClick={[Function]}
            >
              <img
                aria-label="Chicken Parmesan Pizza image"
                className="chakra-image css-g90lcp"
                src="https://www.edamam.com/web-img/4b1/4b1f90a5484e0bf6fed77535a88584b7.jpg"
              />
              <div
                className="css-1s6lsys"
              >
                <div
                  className="chakra-stack css-17hlvik"
                >
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    italian
                  </span>
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    main course
                  </span>
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    lunch/dinner
                  </span>
                </div>
              </div>
              <div
                className="css-19itkfi"
              >
                Chicken Parmesan Pizza
              </div>
              <div
                className="chakra-stack css-22j5vo"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  strokeWidth="0"
                  style={
                    Object {
                      "color": undefined,
                    }
                  }
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15 1H9v2h6V1zm-4 13h2V8h-2v6zm8.03-6.61l1.42-1.42c-.43-.51-.9-.99-1.41-1.41l-1.42 1.42C16.07 4.74 14.12 4 12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9 9-4.03 9-9c0-2.12-.74-4.07-1.97-5.61zM12 20c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z"
                  />
                </svg>
                <span
                  aria-label="time-to-prepare"
                  className="chakra-text css-f9yqvl"
                >
                  132 min
                </span>
              </div>
            </div>
            <div
              aria-label="recipe-card"
              className="chakra-stack recipe-card css-iqg674"
              onClick={[Function]}
            >
              <img
                aria-label="Pizza Primavera image"
                className="chakra-image css-g90lcp"
                src="https://www.edamam.com/web-img/530/53047bf06754eb8a5f75920b378bc919.jpg"
              />
              <div
                className="css-1s6lsys"
              >
                <div
                  className="chakra-stack css-17hlvik"
                >
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    italian
                  </span>
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    main course
                  </span>
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    lunch/dinner
                  </span>
                </div>
              </div>
              <div
                className="css-19itkfi"
              >
                Pizza Primavera
              </div>
              <div
                className="chakra-stack css-22j5vo"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  strokeWidth="0"
                  style={
                    Object {
                      "color": undefined,
                    }
                  }
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15 1H9v2h6V1zm-4 13h2V8h-2v6zm8.03-6.61l1.42-1.42c-.43-.51-.9-.99-1.41-1.41l-1.42 1.42C16.07 4.74 14.12 4 12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9 9-4.03 9-9c0-2.12-.74-4.07-1.97-5.61zM12 20c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z"
                  />
                </svg>
                <span
                  aria-label="time-to-prepare"
                  className="chakra-text css-f9yqvl"
                >
                  25 min
                </span>
              </div>
            </div>
            <div
              aria-label="recipe-card"
              className="chakra-stack recipe-card css-iqg674"
              onClick={[Function]}
            >
              <img
                aria-label="Pepperoni Pizza Cake image"
                className="chakra-image css-g90lcp"
                src="https://www.edamam.com/web-img/19d/19da59c9bc2cd22835ce26ff5b1cfa3a.jpg"
              />
              <div
                className="css-1s6lsys"
              >
                <div
                  className="chakra-stack css-17hlvik"
                >
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    italian
                  </span>
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    desserts
                  </span>
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    lunch/dinner
                  </span>
                </div>
              </div>
              <div
                className="css-19itkfi"
              >
                Pepperoni Pizza Cake
              </div>
              <div
                className="chakra-stack css-22j5vo"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  strokeWidth="0"
                  style={
                    Object {
                      "color": undefined,
                    }
                  }
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15 1H9v2h6V1zm-4 13h2V8h-2v6zm8.03-6.61l1.42-1.42c-.43-.51-.9-.99-1.41-1.41l-1.42 1.42C16.07 4.74 14.12 4 12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9 9-4.03 9-9c0-2.12-.74-4.07-1.97-5.61zM12 20c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z"
                  />
                </svg>
                <span
                  aria-label="time-to-prepare"
                  className="chakra-text css-f9yqvl"
                >
                  - min
                </span>
              </div>
            </div>
            <div
              aria-label="recipe-card"
              className="chakra-stack recipe-card css-iqg674"
              onClick={[Function]}
            >
              <img
                aria-label="Neapolitan style vegetarian pizza image"
                className="chakra-image css-g90lcp"
                src="https://www.edamam.com/web-img/e99/e998843408f2f325e7368218bdd81263.jpg"
              />
              <div
                className="css-1s6lsys"
              >
                <div
                  className="chakra-stack css-17hlvik"
                >
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    italian
                  </span>
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    main course
                  </span>
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    lunch/dinner
                  </span>
                </div>
              </div>
              <div
                className="css-19itkfi"
              >
                Neapolitan style vegetarian pizza
              </div>
              <div
                className="chakra-stack css-22j5vo"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  strokeWidth="0"
                  style={
                    Object {
                      "color": undefined,
                    }
                  }
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15 1H9v2h6V1zm-4 13h2V8h-2v6zm8.03-6.61l1.42-1.42c-.43-.51-.9-.99-1.41-1.41l-1.42 1.42C16.07 4.74 14.12 4 12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9 9-4.03 9-9c0-2.12-.74-4.07-1.97-5.61zM12 20c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z"
                  />
                </svg>
                <span
                  aria-label="time-to-prepare"
                  className="chakra-text css-f9yqvl"
                >
                  60 min
                </span>
              </div>
            </div>
            <div
              aria-label="recipe-card"
              className="chakra-stack recipe-card css-iqg674"
              onClick={[Function]}
            >
              <img
                aria-label="Antipasto Pizza image"
                className="chakra-image css-g90lcp"
                src="https://www.edamam.com/web-img/746/7466e759caa856a5d1879ba995391a17.jpg"
              />
              <div
                className="css-1s6lsys"
              >
                <div
                  className="chakra-stack css-17hlvik"
                >
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    italian
                  </span>
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    starter
                  </span>
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    lunch/dinner
                  </span>
                </div>
              </div>
              <div
                className="css-19itkfi"
              >
                Antipasto Pizza
              </div>
              <div
                className="chakra-stack css-22j5vo"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  strokeWidth="0"
                  style={
                    Object {
                      "color": undefined,
                    }
                  }
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15 1H9v2h6V1zm-4 13h2V8h-2v6zm8.03-6.61l1.42-1.42c-.43-.51-.9-.99-1.41-1.41l-1.42 1.42C16.07 4.74 14.12 4 12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9 9-4.03 9-9c0-2.12-.74-4.07-1.97-5.61zM12 20c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z"
                  />
                </svg>
                <span
                  aria-label="time-to-prepare"
                  className="chakra-text css-f9yqvl"
                >
                  - min
                </span>
              </div>
            </div>
            <div
              aria-label="recipe-card"
              className="chakra-stack recipe-card css-iqg674"
              onClick={[Function]}
            >
              <img
                aria-label="Tricolor Pizza image"
                className="chakra-image css-g90lcp"
                src="https://www.edamam.com/web-img/0b3/0b3e795347f09d716955aedd844fae2f.jpg"
              />
              <div
                className="css-1s6lsys"
              >
                <div
                  className="chakra-stack css-17hlvik"
                >
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    italian
                  </span>
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    main course
                  </span>
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    lunch/dinner
                  </span>
                </div>
              </div>
              <div
                className="css-19itkfi"
              >
                Tricolor Pizza
              </div>
              <div
                className="chakra-stack css-22j5vo"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  strokeWidth="0"
                  style={
                    Object {
                      "color": undefined,
                    }
                  }
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15 1H9v2h6V1zm-4 13h2V8h-2v6zm8.03-6.61l1.42-1.42c-.43-.51-.9-.99-1.41-1.41l-1.42 1.42C16.07 4.74 14.12 4 12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9 9-4.03 9-9c0-2.12-.74-4.07-1.97-5.61zM12 20c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z"
                  />
                </svg>
                <span
                  aria-label="time-to-prepare"
                  className="chakra-text css-f9yqvl"
                >
                  15 min
                </span>
              </div>
            </div>
            <div
              aria-label="recipe-card"
              className="chakra-stack recipe-card css-iqg674"
              onClick={[Function]}
            >
              <img
                aria-label="New Potato & Rosemary Pizza image"
                className="chakra-image css-g90lcp"
                src="https://www.edamam.com/web-img/40e/40ec51f584bc93b1f6d65aeda9389340.jpg"
              />
              <div
                className="css-1s6lsys"
              >
                <div
                  className="chakra-stack css-17hlvik"
                >
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    italian
                  </span>
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    main course
                  </span>
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    lunch/dinner
                  </span>
                </div>
              </div>
              <div
                className="css-19itkfi"
              >
                New Potato & Rosemary Pizza
              </div>
              <div
                className="chakra-stack css-22j5vo"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  strokeWidth="0"
                  style={
                    Object {
                      "color": undefined,
                    }
                  }
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15 1H9v2h6V1zm-4 13h2V8h-2v6zm8.03-6.61l1.42-1.42c-.43-.51-.9-.99-1.41-1.41l-1.42 1.42C16.07 4.74 14.12 4 12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9 9-4.03 9-9c0-2.12-.74-4.07-1.97-5.61zM12 20c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z"
                  />
                </svg>
                <span
                  aria-label="time-to-prepare"
                  className="chakra-text css-f9yqvl"
                >
                  - min
                </span>
              </div>
            </div>
            <div
              aria-label="recipe-card"
              className="chakra-stack recipe-card css-iqg674"
              onClick={[Function]}
            >
              <img
                aria-label="Pierogy Pizza image"
                className="chakra-image css-g90lcp"
                src="https://www.edamam.com/web-img/11a/11a323f5a5fc782ca49995749482d9e6.jpg"
              />
              <div
                className="css-1s6lsys"
              >
                <div
                  className="chakra-stack css-17hlvik"
                >
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    italian
                  </span>
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    main course
                  </span>
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    lunch/dinner
                  </span>
                </div>
              </div>
              <div
                className="css-19itkfi"
              >
                Pierogy Pizza
              </div>
              <div
                className="chakra-stack css-22j5vo"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  strokeWidth="0"
                  style={
                    Object {
                      "color": undefined,
                    }
                  }
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15 1H9v2h6V1zm-4 13h2V8h-2v6zm8.03-6.61l1.42-1.42c-.43-.51-.9-.99-1.41-1.41l-1.42 1.42C16.07 4.74 14.12 4 12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9 9-4.03 9-9c0-2.12-.74-4.07-1.97-5.61zM12 20c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z"
                  />
                </svg>
                <span
                  aria-label="time-to-prepare"
                  className="chakra-text css-f9yqvl"
                >
                  - min
                </span>
              </div>
            </div>
            <div
              aria-label="recipe-card"
              className="chakra-stack recipe-card css-iqg674"
              onClick={[Function]}
            >
              <img
                aria-label="Deep Dish Pizza image"
                className="chakra-image css-g90lcp"
                src="https://www.edamam.com/web-img/2d0/2d0f6073997abfb6ffdb901a014654e5.jpg"
              />
              <div
                className="css-1s6lsys"
              >
                <div
                  className="chakra-stack css-17hlvik"
                >
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    italian
                  </span>
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    main course
                  </span>
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    lunch/dinner
                  </span>
                </div>
              </div>
              <div
                className="css-19itkfi"
              >
                Deep Dish Pizza
              </div>
              <div
                className="chakra-stack css-22j5vo"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  strokeWidth="0"
                  style={
                    Object {
                      "color": undefined,
                    }
                  }
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15 1H9v2h6V1zm-4 13h2V8h-2v6zm8.03-6.61l1.42-1.42c-.43-.51-.9-.99-1.41-1.41l-1.42 1.42C16.07 4.74 14.12 4 12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9 9-4.03 9-9c0-2.12-.74-4.07-1.97-5.61zM12 20c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z"
                  />
                </svg>
                <span
                  aria-label="time-to-prepare"
                  className="chakra-text css-f9yqvl"
                >
                  - min
                </span>
              </div>
            </div>
            <div
              aria-label="recipe-card"
              className="chakra-stack recipe-card css-iqg674"
              onClick={[Function]}
            >
              <img
                aria-label="Slow-Cooker Pizza image"
                className="chakra-image css-g90lcp"
                src="https://www.edamam.com/web-img/da9/da9cf0f93cf316f40587071479721b75.jpg"
              />
              <div
                className="css-1s6lsys"
              >
                <div
                  className="chakra-stack css-17hlvik"
                >
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    italian
                  </span>
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    main course
                  </span>
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    lunch/dinner
                  </span>
                </div>
              </div>
              <div
                className="css-19itkfi"
              >
                Slow-Cooker Pizza
              </div>
              <div
                className="chakra-stack css-22j5vo"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  strokeWidth="0"
                  style={
                    Object {
                      "color": undefined,
                    }
                  }
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15 1H9v2h6V1zm-4 13h2V8h-2v6zm8.03-6.61l1.42-1.42c-.43-.51-.9-.99-1.41-1.41l-1.42 1.42C16.07 4.74 14.12 4 12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9 9-4.03 9-9c0-2.12-.74-4.07-1.97-5.61zM12 20c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z"
                  />
                </svg>
                <span
                  aria-label="time-to-prepare"
                  className="chakra-text css-f9yqvl"
                >
                  190 min
                </span>
              </div>
            </div>
            <div
              aria-label="recipe-card"
              className="chakra-stack recipe-card css-iqg674"
              onClick={[Function]}
            >
              <img
                aria-label="Fig and Pig Pizza image"
                className="chakra-image css-g90lcp"
                src="https://www.edamam.com/web-img/85a/85a0ae245ba4d22a5848397f390df7c5.jpg"
              />
              <div
                className="css-1s6lsys"
              >
                <div
                  className="chakra-stack css-17hlvik"
                >
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    italian
                  </span>
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    main course
                  </span>
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    lunch/dinner
                  </span>
                </div>
              </div>
              <div
                className="css-19itkfi"
              >
                Fig and Pig Pizza
              </div>
              <div
                className="chakra-stack css-22j5vo"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  strokeWidth="0"
                  style={
                    Object {
                      "color": undefined,
                    }
                  }
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15 1H9v2h6V1zm-4 13h2V8h-2v6zm8.03-6.61l1.42-1.42c-.43-.51-.9-.99-1.41-1.41l-1.42 1.42C16.07 4.74 14.12 4 12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9 9-4.03 9-9c0-2.12-.74-4.07-1.97-5.61zM12 20c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z"
                  />
                </svg>
                <span
                  aria-label="time-to-prepare"
                  className="chakra-text css-f9yqvl"
                >
                  - min
                </span>
              </div>
            </div>
            <div
              aria-label="recipe-card"
              className="chakra-stack recipe-card css-iqg674"
              onClick={[Function]}
            >
              <img
                aria-label="Lahmahjoon Pizza image"
                className="chakra-image css-g90lcp"
                src="https://www.edamam.com/web-img/e45/e4574e9a5d1c5cf3284c4adc58502502.jpg"
              />
              <div
                className="css-1s6lsys"
              >
                <div
                  className="chakra-stack css-17hlvik"
                >
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    italian
                  </span>
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    main course
                  </span>
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    lunch/dinner
                  </span>
                </div>
              </div>
              <div
                className="css-19itkfi"
              >
                Lahmahjoon Pizza
              </div>
              <div
                className="chakra-stack css-22j5vo"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  strokeWidth="0"
                  style={
                    Object {
                      "color": undefined,
                    }
                  }
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15 1H9v2h6V1zm-4 13h2V8h-2v6zm8.03-6.61l1.42-1.42c-.43-.51-.9-.99-1.41-1.41l-1.42 1.42C16.07 4.74 14.12 4 12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9 9-4.03 9-9c0-2.12-.74-4.07-1.97-5.61zM12 20c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z"
                  />
                </svg>
                <span
                  aria-label="time-to-prepare"
                  className="chakra-text css-f9yqvl"
                >
                  - min
                </span>
              </div>
            </div>
            <div
              aria-label="recipe-card"
              className="chakra-stack recipe-card css-iqg674"
              onClick={[Function]}
            >
              <img
                aria-label="Crescent Roll Pizza image"
                className="chakra-image css-g90lcp"
                src="https://www.edamam.com/web-img/d2d/d2d4200591d94bfc1c8588f07df76000.jpg"
              />
              <div
                className="css-1s6lsys"
              >
                <div
                  className="chakra-stack css-17hlvik"
                >
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    italian
                  </span>
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    main course
                  </span>
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    lunch/dinner
                  </span>
                </div>
              </div>
              <div
                className="css-19itkfi"
              >
                Crescent Roll Pizza
              </div>
              <div
                className="chakra-stack css-22j5vo"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  strokeWidth="0"
                  style={
                    Object {
                      "color": undefined,
                    }
                  }
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15 1H9v2h6V1zm-4 13h2V8h-2v6zm8.03-6.61l1.42-1.42c-.43-.51-.9-.99-1.41-1.41l-1.42 1.42C16.07 4.74 14.12 4 12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9 9-4.03 9-9c0-2.12-.74-4.07-1.97-5.61zM12 20c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z"
                  />
                </svg>
                <span
                  aria-label="time-to-prepare"
                  className="chakra-text css-f9yqvl"
                >
                  - min
                </span>
              </div>
            </div>
            <div
              aria-label="recipe-card"
              className="chakra-stack recipe-card css-iqg674"
              onClick={[Function]}
            >
              <img
                aria-label="Tomato & Taleggio Pizza image"
                className="chakra-image css-g90lcp"
                src="https://www.edamam.com/web-img/33c/33cea8ff00bad28f5f2599fdef5731cb.jpg"
              />
              <div
                className="css-1s6lsys"
              >
                <div
                  className="chakra-stack css-17hlvik"
                >
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    italian
                  </span>
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    main course
                  </span>
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    lunch/dinner
                  </span>
                </div>
              </div>
              <div
                className="css-19itkfi"
              >
                Tomato & Taleggio Pizza
              </div>
              <div
                className="chakra-stack css-22j5vo"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  strokeWidth="0"
                  style={
                    Object {
                      "color": undefined,
                    }
                  }
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15 1H9v2h6V1zm-4 13h2V8h-2v6zm8.03-6.61l1.42-1.42c-.43-.51-.9-.99-1.41-1.41l-1.42 1.42C16.07 4.74 14.12 4 12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9 9-4.03 9-9c0-2.12-.74-4.07-1.97-5.61zM12 20c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z"
                  />
                </svg>
                <span
                  aria-label="time-to-prepare"
                  className="chakra-text css-f9yqvl"
                >
                  - min
                </span>
              </div>
            </div>
            <div
              aria-label="recipe-card"
              className="chakra-stack recipe-card css-iqg674"
              onClick={[Function]}
            >
              <img
                aria-label="Sausage & Pepper Pizza image"
                className="chakra-image css-g90lcp"
                src="https://www.edamam.com/web-img/40b/40bc1a8d28343a0a126a6df7295020fd.jpg"
              />
              <div
                className="css-1s6lsys"
              >
                <div
                  className="chakra-stack css-17hlvik"
                >
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    italian
                  </span>
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    main course
                  </span>
                  <span
                    aria-label="recipe-tag"
                    className="css-1kpd5c2"
                  >
                    lunch/dinner
                  </span>
                </div>
              </div>
              <div
                className="css-19itkfi"
              >
                Sausage & Pepper Pizza
              </div>
              <div
                className="chakra-stack css-22j5vo"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  strokeWidth="0"
                  style={
                    Object {
                      "color": undefined,
                    }
                  }
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15 1H9v2h6V1zm-4 13h2V8h-2v6zm8.03-6.61l1.42-1.42c-.43-.51-.9-.99-1.41-1.41l-1.42 1.42C16.07 4.74 14.12 4 12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9 9-4.03 9-9c0-2.12-.74-4.07-1.97-5.61zM12 20c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z"
                  />
                </svg>
                <span
                  aria-label="time-to-prepare"
                  className="chakra-text css-f9yqvl"
                >
                  20 min
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <span />,
]
`;

exports[`Storyshots Organisms/Recipe Card Row Recipes Row Loading 1`] = `
Array [
  <div>
    <div
      style={
        Object {
          "padding": "2em 1em",
        }
      }
    >
      <div
        className="css-1s6lsys"
      >
        <div
          className="chakra-stack css-16ghf81"
        >
          <div
            className="css-6tobvh"
          >
            <div
              aria-label="recipe-card"
              className="chakra-stack recipe-card css-1pgxbxj"
              onClick={[Function]}
            >
              <div
                aria-label="loading-recipe-card"
                className="chakra-skeleton css-rojnxp"
              />
              <div
                className="chakra-skeleton css-1mfzu6"
              >
                Pumpkin Soup Recipe
              </div>
              <div
                className="chakra-skeleton css-1mgb0mg"
              >
                80 minutes
              </div>
            </div>
            <div
              aria-label="recipe-card"
              className="chakra-stack recipe-card css-1pgxbxj"
              onClick={[Function]}
            >
              <div
                aria-label="loading-recipe-card"
                className="chakra-skeleton css-rojnxp"
              />
              <div
                className="chakra-skeleton css-1mfzu6"
              >
                Pumpkin Soup Recipe
              </div>
              <div
                className="chakra-skeleton css-1mgb0mg"
              >
                80 minutes
              </div>
            </div>
            <div
              aria-label="recipe-card"
              className="chakra-stack recipe-card css-1pgxbxj"
              onClick={[Function]}
            >
              <div
                aria-label="loading-recipe-card"
                className="chakra-skeleton css-rojnxp"
              />
              <div
                className="chakra-skeleton css-1mfzu6"
              >
                Pumpkin Soup Recipe
              </div>
              <div
                className="chakra-skeleton css-1mgb0mg"
              >
                80 minutes
              </div>
            </div>
            <div
              aria-label="recipe-card"
              className="chakra-stack recipe-card css-1pgxbxj"
              onClick={[Function]}
            >
              <div
                aria-label="loading-recipe-card"
                className="chakra-skeleton css-rojnxp"
              />
              <div
                className="chakra-skeleton css-1mfzu6"
              >
                Pumpkin Soup Recipe
              </div>
              <div
                className="chakra-skeleton css-1mgb0mg"
              >
                80 minutes
              </div>
            </div>
            <div
              aria-label="recipe-card"
              className="chakra-stack recipe-card css-1pgxbxj"
              onClick={[Function]}
            >
              <div
                aria-label="loading-recipe-card"
                className="chakra-skeleton css-rojnxp"
              />
              <div
                className="chakra-skeleton css-1mfzu6"
              >
                Pumpkin Soup Recipe
              </div>
              <div
                className="chakra-skeleton css-1mgb0mg"
              >
                80 minutes
              </div>
            </div>
            <div
              aria-label="recipe-card"
              className="chakra-stack recipe-card css-1pgxbxj"
              onClick={[Function]}
            >
              <div
                aria-label="loading-recipe-card"
                className="chakra-skeleton css-rojnxp"
              />
              <div
                className="chakra-skeleton css-1mfzu6"
              >
                Pumpkin Soup Recipe
              </div>
              <div
                className="chakra-skeleton css-1mgb0mg"
              >
                80 minutes
              </div>
            </div>
            <div
              aria-label="recipe-card"
              className="chakra-stack recipe-card css-1pgxbxj"
              onClick={[Function]}
            >
              <div
                aria-label="loading-recipe-card"
                className="chakra-skeleton css-rojnxp"
              />
              <div
                className="chakra-skeleton css-1mfzu6"
              >
                Pumpkin Soup Recipe
              </div>
              <div
                className="chakra-skeleton css-1mgb0mg"
              >
                80 minutes
              </div>
            </div>
            <div
              aria-label="recipe-card"
              className="chakra-stack recipe-card css-1pgxbxj"
              onClick={[Function]}
            >
              <div
                aria-label="loading-recipe-card"
                className="chakra-skeleton css-rojnxp"
              />
              <div
                className="chakra-skeleton css-1mfzu6"
              >
                Pumpkin Soup Recipe
              </div>
              <div
                className="chakra-skeleton css-1mgb0mg"
              >
                80 minutes
              </div>
            </div>
            <div
              aria-label="recipe-card"
              className="chakra-stack recipe-card css-1pgxbxj"
              onClick={[Function]}
            >
              <div
                aria-label="loading-recipe-card"
                className="chakra-skeleton css-rojnxp"
              />
              <div
                className="chakra-skeleton css-1mfzu6"
              >
                Pumpkin Soup Recipe
              </div>
              <div
                className="chakra-skeleton css-1mgb0mg"
              >
                80 minutes
              </div>
            </div>
            <div
              aria-label="recipe-card"
              className="chakra-stack recipe-card css-1pgxbxj"
              onClick={[Function]}
            >
              <div
                aria-label="loading-recipe-card"
                className="chakra-skeleton css-rojnxp"
              />
              <div
                className="chakra-skeleton css-1mfzu6"
              >
                Pumpkin Soup Recipe
              </div>
              <div
                className="chakra-skeleton css-1mgb0mg"
              >
                80 minutes
              </div>
            </div>
            <div
              aria-label="recipe-card"
              className="chakra-stack recipe-card css-1pgxbxj"
              onClick={[Function]}
            >
              <div
                aria-label="loading-recipe-card"
                className="chakra-skeleton css-rojnxp"
              />
              <div
                className="chakra-skeleton css-1mfzu6"
              >
                Pumpkin Soup Recipe
              </div>
              <div
                className="chakra-skeleton css-1mgb0mg"
              >
                80 minutes
              </div>
            </div>
            <div
              aria-label="recipe-card"
              className="chakra-stack recipe-card css-1pgxbxj"
              onClick={[Function]}
            >
              <div
                aria-label="loading-recipe-card"
                className="chakra-skeleton css-rojnxp"
              />
              <div
                className="chakra-skeleton css-1mfzu6"
              >
                Pumpkin Soup Recipe
              </div>
              <div
                className="chakra-skeleton css-1mgb0mg"
              >
                80 minutes
              </div>
            </div>
            <div
              aria-label="recipe-card"
              className="chakra-stack recipe-card css-1pgxbxj"
              onClick={[Function]}
            >
              <div
                aria-label="loading-recipe-card"
                className="chakra-skeleton css-rojnxp"
              />
              <div
                className="chakra-skeleton css-1mfzu6"
              >
                Pumpkin Soup Recipe
              </div>
              <div
                className="chakra-skeleton css-1mgb0mg"
              >
                80 minutes
              </div>
            </div>
            <div
              aria-label="recipe-card"
              className="chakra-stack recipe-card css-1pgxbxj"
              onClick={[Function]}
            >
              <div
                aria-label="loading-recipe-card"
                className="chakra-skeleton css-rojnxp"
              />
              <div
                className="chakra-skeleton css-1mfzu6"
              >
                Pumpkin Soup Recipe
              </div>
              <div
                className="chakra-skeleton css-1mgb0mg"
              >
                80 minutes
              </div>
            </div>
            <div
              aria-label="recipe-card"
              className="chakra-stack recipe-card css-1pgxbxj"
              onClick={[Function]}
            >
              <div
                aria-label="loading-recipe-card"
                className="chakra-skeleton css-rojnxp"
              />
              <div
                className="chakra-skeleton css-1mfzu6"
              >
                Pumpkin Soup Recipe
              </div>
              <div
                className="chakra-skeleton css-1mgb0mg"
              >
                80 minutes
              </div>
            </div>
            <div
              aria-label="recipe-card"
              className="chakra-stack recipe-card css-1pgxbxj"
              onClick={[Function]}
            >
              <div
                aria-label="loading-recipe-card"
                className="chakra-skeleton css-rojnxp"
              />
              <div
                className="chakra-skeleton css-1mfzu6"
              >
                Pumpkin Soup Recipe
              </div>
              <div
                className="chakra-skeleton css-1mgb0mg"
              >
                80 minutes
              </div>
            </div>
            <div
              aria-label="recipe-card"
              className="chakra-stack recipe-card css-1pgxbxj"
              onClick={[Function]}
            >
              <div
                aria-label="loading-recipe-card"
                className="chakra-skeleton css-rojnxp"
              />
              <div
                className="chakra-skeleton css-1mfzu6"
              >
                Pumpkin Soup Recipe
              </div>
              <div
                className="chakra-skeleton css-1mgb0mg"
              >
                80 minutes
              </div>
            </div>
            <div
              aria-label="recipe-card"
              className="chakra-stack recipe-card css-1pgxbxj"
              onClick={[Function]}
            >
              <div
                aria-label="loading-recipe-card"
                className="chakra-skeleton css-rojnxp"
              />
              <div
                className="chakra-skeleton css-1mfzu6"
              >
                Pumpkin Soup Recipe
              </div>
              <div
                className="chakra-skeleton css-1mgb0mg"
              >
                80 minutes
              </div>
            </div>
            <div
              aria-label="recipe-card"
              className="chakra-stack recipe-card css-1pgxbxj"
              onClick={[Function]}
            >
              <div
                aria-label="loading-recipe-card"
                className="chakra-skeleton css-rojnxp"
              />
              <div
                className="chakra-skeleton css-1mfzu6"
              >
                Pumpkin Soup Recipe
              </div>
              <div
                className="chakra-skeleton css-1mgb0mg"
              >
                80 minutes
              </div>
            </div>
            <div
              aria-label="recipe-card"
              className="chakra-stack recipe-card css-1pgxbxj"
              onClick={[Function]}
            >
              <div
                aria-label="loading-recipe-card"
                className="chakra-skeleton css-rojnxp"
              />
              <div
                className="chakra-skeleton css-1mfzu6"
              >
                Pumpkin Soup Recipe
              </div>
              <div
                className="chakra-skeleton css-1mgb0mg"
              >
                80 minutes
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <span />,
]
`;
